--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Hello, people</h1>
     <h2>Current time is {{ now }}</h2>
+    <h3>
+      I am new python developer
+  </h3>
 </body>
 
 </html>
